--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 @font-face {
     font-family: myOtherFont;
-    src: url("fonts/angrybirds-regular.ttf");
+    src: url("fonts/Planes_ValMore.ttf");
 } 
 
 *{
