--- a/style.css
+++ b/style.css
@@ -343,25 +343,8 @@ section#playSceneCurtain{
     left: 0;
     bottom: 0;
     right: 0;
-    border: 15px dashed greenyellow;
-    background-color: green;
+    background: transparent;
     display: none;
-}
-section#playSceneCurtain div#message{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-section#playSceneCurtain div#message p{
-    font-size: 2em;
-    text-align: center;
-    position: absolute;
-    bottom: 0;
-    right: 0;
 }
 
 /* LEVEL-SELECT */
