--- a/style.css
+++ b/style.css
@@ -151,12 +151,12 @@ section#playScreen{
 }
 #rightControlButtons
 {
-    /*border: 2px solid white; */
+    border: 2px solid white; 
     position: absolute;
     bottom: 6%;
     right: 4%;
-    width: 30%;
-    height: 70%;
+    width: 20%;
+    height: 40%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -172,12 +172,13 @@ section#playScreen{
 }
 
 #rightControlButtons button{
-    width: 30%;
-    height: 30%;
+    width: 50%;
+    height: 50%;
     color: white;
-    background: transparent;;
+    border-radius: 50%;
+    background: transparent;
     font-family: myOtherFont;
-    font-size: 3rem;
+    font-size: 2rem;
     color: white;
 }
 /*left control buttons*/
@@ -201,7 +202,7 @@ button#up
 {
     position: absolute;
     width: 50%;
-    bottom: 0;
+    bottom: calc(50%);
     left: 0;
 }
 button#down
@@ -209,22 +210,20 @@ button#down
     position: absolute;
     width: 50%;
     bottom: 0;
-    right: 0;
+    left: 0;
  
 }
 #rangedShot
 {
     position: absolute;
-    top: 0;
+    bottom: 0;
     right: 0;
-    border-radius: 50%;
 }
 #slash
 {
     position: absolute;
-    top: (30%+10%);
+    bottom: calc(50%);
     right: 0;
-    border-radius: 50%;
 }
 /* LEVEL-COMPLETE */
 section#levelCompleteScreen{
